CMC Report Portal Links Page

--- a/index - Backup.html
+++ b/index - Backup.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>CMC Report Portal / Admitting Analysis x Billing Analysis</title>
+	<title>Anna Marie Sy / Web Developer Portfolio</title>
 
 	<!-- External CSS -->
 	<link rel="stylesheet" href="style.css">
@@ -23,18 +23,11 @@
 	<!-- We will be using class and ids to name our tags/elements -->
 	<div class="container-fluid">
 		<section id="landing">
+			<h1>Full Stack Web Developer</h1>
+			<p>Hi! My name is Anna and I love building things from scratch</p>
+			<img src="images/myImage1.png" id="profile">
 
-			<img src="images/cmclogo2022.png" id="profile">
-
-			<h1>Admitting Analysis</h1>
-			<!-- <p>Admitting Analysis Report Link</p> -->
-			<a href="http://195.1.200.68/reports/report/CMC%20Custom%20Reports/Admitting/Admitting%20Analysis" class="btn btn-success btn-lg mt-3">Admitting Analysis Report Link</a>
-
-			<br>
-
-			<h1>Billing Analysis</h1>
-			<!-- <p>Billing Analysis Report Link</p> -->
-			<a href="http://195.1.200.68/reports/report/CMC%20Custom%20Reports/Business%20Office/Billing%20Analysis" class="btn btn-success btn-lg mt-3">Billing Analysis Report Link</a>
+			<a href="mailto:annamariessy@gmail.com" class="btn btn-success btn-lg mt-3">Let's Work Together</a>
 		</section>
 	</div>	
 
